# app-factory

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  railway.toml  railway.worker.toml  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/app/: ai_engine.py  auth.py  browser_agent.py  build_manager.py  database.py  helixa_ai.py  main.py  models.py  pipeline.py  store_api.py  task_queue.py  watchdog.py
backend/app/helixa_data/: helixa_experimental_export.json  helixa_full_export.json  helixa_synthesis_export.json
dashboard/: .env.example  .env.production  index.html  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/apps/: page.tsx
dashboard/components/: AppsFilters.tsx  DashboardCharts.tsx  PipelineStages.tsx  StatusBadge.tsx
dashboard/components/ui/: card.tsx  select.tsx  textarea.tsx
dashboard/lib/: api.ts  types.ts
dashboard/public/: manifest.json
dashboard/src/: App.tsx
dashboard/src/components/: OnboardingTour.tsx  Tooltip.tsx
dashboard/src/lib/: api.ts  auth-context.tsx  (+1 more)
monitoring/prometheus/: prometheus.yml
orchestrator/: database.py  main.py
orchestrator/activities/: analysis.py  build.py  codegen.py  fix_loop.py  idea.py  listing_gen.py  notify.py  planner.py  store_submit.py  tests.py  validation.py
orchestrator/workflows/: app_workflow.py
progress-dashboard/: index.html  log.json  vercel.json
scripts/: deploy-railway.sh  setup-mac-mini.sh  setup-temporal-cloud.md
telegram_bot/: bot.py
workers/: android_worker.py  ios_worker.py
(+10 files in other folders)
